2006-09-19 Xan Lopez <xan.lopez@nokia.com> 

	* gtk/gtktreeview.c: (gtk_tree_view_class_init), (validate_row):

	Add a separator-height style property to GtkTreeView and use it to
	calculate separator's height in treeviews. Fixes NB#37326.

2006-09-19 Xan Lopez <xan.lopez@nokia.com> 

	* gtk/gtkcalendar.c: (gtk_calendar_realize_arrows),
	(gtk_calendar_size_allocate), (gtk_calendar_paint_arrow):

	Changed hardcoded arrow sizes for style properties. Fixes NB#23025

2006-09-18  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkarrow.c (gtk_arrow_expose): Use full extents of the widget to
	draw bigger arrows. NB#33725

2006-09-18  Xan Lopez <xan.lopez@nokia.com>

        Taken from GNOME CVS, fixes NB#31582.

    2006-05-30  Matthias Clasen  <mclasen@redhat.com>

        * gtk/gtkmain.c (gtk_grab_notify_foreach): Don't skip internal
        children when emitting grab-notify.  (#343425, Markku Vire)

2006-09-18  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gdk/x11/gdkinput-x11.c (gdk_input_device_new): Always enable
	extension events for 'pen' devices to get touchscreen pressure. 

2006-09-18  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gtk/gtkwidget.[ch] (_gtk_widget_window_set_extension_events,
	gtk_widget_realize): Refactor setting of extension events on GdkWindow
	to separate function.

	* gtk/gtkrange.c (gtk_range_realize)
	* gtk/gtkexpander.c (gtk_expander_realize)
	* gtk/gtkstatusbar.c (gtk_statusbar_create_window)
	* gtk/gtktextview.c (text_window_realize)
	* gtk/gtkeventbox.c (gtk_event_box_realize)
	* gtk/gtkspinbutton.c (gtk_spin_button_realize)
	* gtk/gtklabel.c (gtk_label_create_window)
	* gtk/gtkentry.c (gtk_entry_realize)
	* gtk/gtktreeviewcolumn.c (_gtk_tree_view_column_realize_button)
	* gtk/gtkmenuitem.c (gtk_menu_item_realize)
	* gtk/gtktext.c (gtk_text_realize)
	* gtk/gtktoolitem.c (create_drag_window)
	* gtk/gtkmenu.c (gtk_menu_realize)
	* gtk/gtkhandlebox.c (gtk_handle_box_realize)
	* gtk/gtktreeview.c (gtk_tree_view_realize)